force-app/main/default/objects/Lead/fields/Assigned_by_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assigned_by_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned by Agent</label>
    <type>Checkbox</type>
</CustomField>