force-app/main/default/objects/Lead/fields/Assigned_by_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_by_Agent_Name__c</fullName>
    <label>Assigned by Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>