force-app/main/default/objects/Lead/fields/Source_City__c.field-meta.xml
<CustomField>
    <fullName>Source_City__c</fullName>
    <label>Source City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>