force-app/main/default/objects/Lead/fields/Unqualification_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Unqualification_Reasoning__c</fullName>
    <label>Unqualification Reasoning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address Not Found</fullName>
            </value>
            <value>
                <fullName>Credit Issues</fullName>
            </value>
            <value>
                <fullName>Permanently Shutdown</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>