force-app/main/default/objects/Lead/fields/Volza__c.field-meta.xml
<CustomField>
    <fullName>Volza__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Volza</label>
    <type>Checkbox</type>
</CustomField>