force-app/main/default/objects/Lead/recordTypes/Approval_Pending.recordType-meta.xml
<RecordType>
    <fullName>Approval_Pending</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Approval Pending</label>
</RecordType>