force-app/main/default/objects/Lead/validationRules/Unqualification_Reasoning.validationRule-meta.xml
<ValidationRule>
    <fullName>Unqualification_Reasoning</fullName>
    <active>true</active>
    <errorConditionFormula>AND((TEXT(Status)=&apos;Unqualified&apos;), ISBLANK(TEXT(Unqualification_Reasoning__c)))</errorConditionFormula>
    <errorDisplayField>Unqualification_Reasoning__c</errorDisplayField>
    <errorMessage>Please provide reasoning for Unqualifying this Lead</errorMessage>
</ValidationRule>